--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Manajer Channel Premium</title>
+    <title>Zky - Tambah Id Channel</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
@@ -1220,7 +1220,7 @@
 <body>
     <div class="container">
         <header class="header">
-            <h1 class="header-title animated">Manajer Channel Premium</h1>
+            <h1 class="header-title animated">ZKY - ADD IDCH</h1>
             <div class="header-controls">
                 <button class="control-btn" id="themeToggle">
                     <i class="fas fa-moon" id="themeIcon"></i>
@@ -1235,39 +1235,39 @@
                     <div class="role-card animated-slide" data-role="developer">
                         <div class="role-icon"><i class="fas fa-code"></i></div>
                         <h3 class="role-name">Developer</h3>
-                        <p class="role-desc">Akses penuh dengan semua fitur sistem</p>
+                        <p class="role-desc">Akses Developer</p>
                         <span class="role-badge">Limit: ∞</span>
                     </div>
                     <div class="role-card animated-slide" data-role="vip">
                         <div class="role-icon"><i class="fas fa-crown"></i></div>
                         <h3 class="role-name">VIP</h3>
-                        <p class="role-desc">Akses premium dengan fitur tambahan</p>
-                        <span class="role-badge">Limit: 10</span>
+                        <p class="role-desc">Akses VIP - Buy 15K</p>
+                        <span class="role-badge">Limit: 15</span>
                     </div>
                     <div class="role-card animated-slide" data-role="nakama">
                         <div class="role-icon"><i class="fas fa-users"></i></div>
                         <h3 class="role-name">Nakama</h3>
-                        <p class="role-desc">Akses khusus untuk tim internal</p>
-                        <span class="role-badge">Limit: 5</span>
+                        <p class="role-desc">Akses Nakama - Buy 10K</p>
+                        <span class="role-badge">Limit: 10</span>
                     </div>
                     <div class="role-card animated-slide" data-role="moderator">
                         <div class="role-icon"><i class="fas fa-shield-alt"></i></div>
                         <h3 class="role-name">Moderator</h3>
-                        <p class="role-desc">Akses untuk moderasi channel</p>
-                        <span class="role-badge">Limit: 7</span>
+                        <p class="role-desc">Akses Moderator - Buy 5K</p>
+                        <span class="role-badge">Limit: 5</span>
                     </div>
                     <div class="role-card animated-slide" data-role="member">
                         <div class="role-icon"><i class="fas fa-user"></i></div>
                         <h3 class="role-name">Member</h3>
-                        <p class="role-desc">Akses dasar untuk manajemen channel</p>
-                        <span class="role-badge">Limit: 3</span>
+                        <p class="role-desc">Akses Member - Free</p>
+                        <span class="role-badge">Limit: 2</span>
                     </div>
                 </div>
             </div>
 
             <div class="login-container" id="loginContainer" style="display: none;">
                 <h2 class="login-title" id="loginTitle">Login</h2>
-                <p class="login-subtitle">Masukkan kredensial untuk mengakses dashboard</p>
+                <p class="login-subtitle">Masukkan data akun untuk mengakses dashboard</p>
                 <div class="alert alert-danger" id="loginError"></div>
                 <form id="loginForm">
                     <div class="form-group" id="usernameField">
@@ -1292,7 +1292,7 @@
                         </div>
                     </div>
                     <div class="form-group" id="animeField" style="display: none;">
-                        <label for="anime" class="form-label">Anime Favorit</label>
+                        <label for="anime" class="form-label">Anime Favorit Zky</label>
                         <div class="input-with-icon">
                             <input type="text" id="anime" class="form-control" placeholder="Masukkan anime favorit" required>
                             <i class="fas fa-film input-icon"></i>
@@ -1351,7 +1351,7 @@
                     <div class="stat-card animated-slide">
                         <div class="stat-header">
                             <div>
-                                <div class="stat-title">Maks Channel</div>
+                                <div class="stat-title">Max Channel</div>
                                 <div class="stat-value" id="maxChannels">∞</div>
                             </div>
                             <div class="stat-icon warning">
@@ -1545,7 +1545,7 @@
         </div>
 
         <footer class="footer">
-            <p>Manajer Channel Premium &copy; 2023 | Versi 2.0</p>
+            <p>ZKY - ADD IDCH &copy; 2025 BY ZKY DEVELOPER</p>
         </footer>
     </div>
 
@@ -1575,7 +1575,7 @@
                 <button class="close-modal" id="closeDeleteAllModal">&times;</button>
             </div>
             <div class="modal-body">
-                <p>Ini akan menghapus SEMUA channel Anda. Lanjutkan?</p>
+                <p>Ini akan menghapus Semua channel Anda. Lanjutkan?</p>
             </div>
             <div class="modal-footer">
                 <button class="btn btn-secondary" id="cancelDeleteAll">Batal</button>
