--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Advanced Channel Manager</title>
+    <title>ZKY - TAMBAH ID CHANNEL</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
@@ -1216,7 +1216,7 @@
 <body>
     <div class="container">
         <header class="header">
-            <h1 class="header-title">Advanced Channel Manager</h1>
+            <h1 class="header-title">ZKY - TAMBAH ID CHANNEL</h1>
             <div class="header-controls">
                 <button class="control-btn" id="themeToggle">
                     <i class="fas fa-moon" id="themeIcon"></i>
@@ -1226,37 +1226,37 @@
 
         <main>
             <div class="role-selection" id="roleSelection">
-                <h1 class="role-title">Pilih Level Akses</h1>
+                <h1 class="role-title">Pilih Role Akses</h1>
                 <div class="role-grid">
                     <div class="role-card" data-role="developer">
                         <div class="role-icon"><i class="fas fa-code"></i></div>
-                        <h3 class="role-name">Developer</h3>
-                        <p class="role-desc">Akses penuh dengan semua fitur manajemen channel</p>
+                        <h3 class="role-name">DEVELOPER</h3>
+                        <p class="role-desc">Akses Developer</p>
                         <span class="role-badge">Limit: ∞</span>
                     </div>
                     <div class="role-card" data-role="vip">
                         <div class="role-icon"><i class="fas fa-crown"></i></div>
                         <h3 class="role-name">VIP</h3>
-                        <p class="role-desc">Akses premium dengan fitur tambahan</p>
-                        <span class="role-badge">Limit: 10</span>
+                        <p class="role-desc">Akses VIP - Buy 15K</p>
+                        <span class="role-badge">Limit: 15</span>
                     </div>
                     <div class="role-card" data-role="nakama">
                         <div class="role-icon"><i class="fas fa-users"></i></div>
-                        <h3 class="role-name">Nakama</h3>
-                        <p class="role-desc">Akses khusus untuk tim inti</p>
-                        <span class="role-badge">Limit: 5</span>
+                        <h3 class="role-name">NAKAMA</h3>
+                        <p class="role-desc">Akses Nakama - Buy 10K</p>
+                        <span class="role-badge">Limit: 10</span>
                     </div>
                     <div class="role-card" data-role="moderator">
                         <div class="role-icon"><i class="fas fa-shield-alt"></i></div>
-                        <h3 class="role-name">Moderator</h3>
-                        <p class="role-desc">Akses moderasi channel</p>
-                        <span class="role-badge">Limit: 15</span>
+                        <h3 class="role-name">MODERATOR</h3>
+                        <p class="role-desc">Akses Moderator - Buy 5K</p>
+                        <span class="role-badge">Limit: 5</span>
                     </div>
                     <div class="role-card" data-role="member">
                         <div class="role-icon"><i class="fas fa-user"></i></div>
-                        <h3 class="role-name">Member</h3>
-                        <p class="role-desc">Akses dasar untuk menambahkan channel</p>
-                        <span class="role-badge">Limit: 3</span>
+                        <h3 class="role-name">MEMBER</h3>
+                        <p class="role-desc">Akses Member - Free</p>
+                        <span class="role-badge">Limit: 2</span>
                     </div>
                 </div>
             </div>
@@ -1281,7 +1281,7 @@
                         </div>
                     </div>
                     <div class="form-group anime-field" id="animeField">
-                        <label for="anime" class="form-label">Anime</label>
+                        <label for="anime" class="form-label">Anime Favorit Zky</label>
                         <div class="input-with-icon">
                             <input type="text" id="anime" class="form-control" placeholder="Masukkan anime favorit">
                             <i class="fas fa-film input-icon"></i>
@@ -1591,7 +1591,7 @@
         </div>
 
         <footer class="footer">
-            <p>Advanced Channel Manager &copy; 2023 | Versi 3.0</p>
+            <p>ZKY - TAMBAH ID CHANNEL &copy; 2025 - ZKY DEVELOPER</p>
         </footer>
     </div>
 
